--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                 <option value="all_words.txt">Any</option>
                 <option value="adjectives.txt">Adjective</option>
                 <option value="adverbs.txt">Adverb</option>
-                <option value="noun.txt">Noun</option>
+                <option value="nouns.txt">Noun</option>
                 <option value="verbs.txt">Verb</option>
               </select>
           </div>
