--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,15 @@
         <form action="/processform" method="get">
           <div class="row form-inline">
             <div class="form-group">
-              <label for="min">Min Length of Password:</label>
+              <label for="min">Minimum Length of Password:</label>
               <select id = "min" name="min" class="form-control" required>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
                 <option value="15">15</option>
                 <option value="16">16</option>
                 <option value="17">17</option>
@@ -23,7 +30,7 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="max">Max Length of Password:</label>
+              <label for="max">Maximum Length of Password:</label>
               <select id = "max" name="max" class="form-control" required>
                 <option value="26">26</option>
                 <option value="27">27</option>
@@ -35,7 +42,7 @@
           </div>
         <div class="row form-inline">
           <div class="form-group">
-            <label for="minWord">Min Length of Word:</label>
+            <label for="minWord">Minimum Length of Word:</label>
             <select id = "minWord" name="minWord" class="form-control" required>
               <option value="3">3</option>
               <option value="4">4</option>
@@ -43,7 +50,7 @@
             </select>
           </div>
           <div class="form-group">
-            <label for="maxWord">Max Length of Word:</label>
+            <label for="maxWord">Maximum Length of Word:</label>
             <select id = "maxWord" name="maxWord" class="form-control" required>
               <option value="7">7</option>
               <option value="8">8</option>
