--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
             <input type="checkbox" name="sub">
           </div>
           <div class="form-group">
-              <label for="wordstyle">Max Length of Word:</label>
+              <label for="wordstyle">Type of words:</label>
               <select id = "wordstyle" name="wordstyle" class="form-control" required>
                 <option value="all_words.txt">Any</option>
                 <option value="adjectives.txt">Adjective</option>
